--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">BT_Scanner</string>
     <string name="action_settings">Settings</string>
+    <string name="has_not_card">블루루스 BLE 기기가 탐색되지 않았습니다</string>
 </resources>
