Update Bluetooth Low Energy Tools
BLE -> GattManager 수정사항 :
    - 네이밍 변경
    - 필요없는 getter 메서드 생략
    - connect 메서드의 오류 핸들링
    - close 메서드 제거
    - 콜백 메서드를 다수 제거하고 각 메서드의 코드를 수정

BleUiCallbacks -> GattCustomCallbacks 수정사항 :
    - 불필요한 메서드 삭제 (11 -> 7)
    onDeviceConnected
    onCharacteristicFound
    startDeviceWrite
    onDataNotify

BleGattAttributes -> BleGattAttributes

BleHelper -> PrimeHelper

fragment 수정사항 :
     - 불필요한 메서드 제거

DetailActivity 수정사항 :
    - connect / disconnect 시 초기화 체크 코드 추가
    - 블루투스 초기화 체크 메서드 추가
    - onDataNotify 의 코드를 onNewDataFound 에서 처리
    - onCharacteristicFound 의 코드를 onServiceFound 에서 같이 처리

MainNursingActivity 수정사항 :
    - onDataNotify 의 코드를 onNewDataFound 에서 처리
    - onCharacteristicFound 의 코드를 onServiceFound 에서 같이 처리

BLE -> GattManager :
    - Update Class Name
    - Remove unused getter Method
    - Add Error Exception on connect Method
    - Remove close Method
    - Remove some Callback Method and Update code

BleUiCallbacks -> GattCustomCallbacks :
    - Remove unused Method (11 -> 7)
    onDeviceConnected
    onCharacteristicFound
    startDeviceWrite
    onDataNotify

BleGattAttributes -> BleGattAttributes

BleHelper -> PrimeHelper

fragment :
    - Remove unused Method

DetailActivity :
    - Add initialize check code on connect / disconnect Method
    - Add initialize Bluetooth Method
    - Move code onDataNotify to onNewDataFound
    - Move code onCharacteristicFound to onServiceFound

MainNursingActivity :
    - Move code onDataNotify to onNewDataFound
    - Move code onCharacteristicFound to onServiceFound

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,7 @@
     <string name="decimal">Decimal:</string>
     <string name="updated">Updated:</string>
 
-    <string name="ble">BLE</string>
+    <string name="gattManager">BLE</string>
     <string name="rssi">rssi</string>
     <string name="info">info</string>
     <string name="calendar">calendar</string>
