--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,7 @@
     <string name="add_user_men">Man</string>
     <string name="add_user_woman">woman</string>
     <string name="add_user_skip">Skip</string>
+    <string name="bt_on">블루투스 On</string>
 
 
 </resources>
