--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,8 @@
     <string name="add_user_skip">Skip</string>
     <string name="bt_on">블루투스 On</string>
     <string name="fail_read_characteristic">Read Fail!</string>
+    <string name="service_type_primary">primary</string>
+    <string name="service_type_secondary">Secondary</string>
 
 
 </resources>
