Remove DashboardAdapter/Item
Update strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -115,6 +115,7 @@
     <string name="fail_read_characteristic">Read Fail!</string>
     <string name="service_type_primary">primary</string>
     <string name="service_type_secondary">Secondary</string>
+    <string name="accept_ok">기입 정보가 확실한지 확인해주시기 바랍니다.</string>
 
 
 </resources>
