--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,45 +1,45 @@
 <resources>
-    <string name="app_name">BT_Scanner</string>
-    <string name="action_settings">Settings</string>
-    <string name="device_name_prime">Prime</string>
+    <string name="app_name">BT.Scanner</string>
+    <string name="action.settings">Settings</string>
+    <string name="device.name.prime">Prime</string>
 
-    <string name="menu_scan">스캔</string>
-    <string name="menu_sample">샘플</string>
-    <string name="menu_help">HELP</string>
-    <string name="menu_link">link</string>
+    <string name="menu.scan">스캔</string>
+    <string name="menu.sample">샘플</string>
+    <string name="menu.help">HELP</string>
+    <string name="menu.link">link</string>
 
-    <string name="menu_nursing_dashboard">DASHBOARD</string>
-    <string name="menu_nursing_dashboard_main">메인</string>
-    <string name="menu_nursing_dashboard_step">걸음</string>
-    <string name="menu_nursing_dashboard_calorie">칼로리</string>
-    <string name="menu_nursing_dashboard_distance">거리</string>
-    <string name="menu_nursing_dashboard_etc">수면</string>
+    <string name="menu.dashboard">DASHBOARD</string>
+    <string name="menu.dashboard.main">메인</string>
+    <string name="menu.dashboard.step">걸음</string>
+    <string name="menu.dashboard.calorie">칼로리</string>
+    <string name="menu.dashboard.distance">거리</string>
+    <string name="menu.dashboard.etc">수면</string>
 
-    <string name="menu_nursing_info">USER INFO</string>
-    <string name="menu_nursing_info_scan">스캔</string>
-    <string name="menu_nursing_info_prime">Prime</string>
-    <string name="menu_nursing_info_goal">GOAL</string>
+    <string name="menu.info">USER INFO</string>
+    <string name="menu.info.scan">스캔</string>
+    <string name="menu.info.prime">Prime</string>
+    <string name="menu.info.goal">GOAL</string>
 
-    <string name="menu_nursing_about">ABOUT</string>
-    <string name="menu_nursing_about_dev">개발자 모드</string>
-    <string name="menu_nursing_about_reset">유저정보 지우기</string>
-    <string name="menu_nursing_about_info">앱 정보</string>
+    <string name="menu.about">ABOUT</string>
+    <string name="menu.about.dev">개발자 모드</string>
+    <string name="menu.about.reset">유저정보 지우기</string>
+    <string name="menu.about.info">앱 정보</string>
 
-    <string name="detail_name">Name :</string>
-    <string name="detail_rssi">RSSI :</string>
-    <string name="detail_address">Address :</string>
-    <string name="detail_state">state :</string>
-    <string name="bond_state">Bond State :</string>
+    <string name="detail.name">Name :</string>
+    <string name="detail.rssi">RSSI :</string>
+    <string name="detail.address">Address :</string>
+    <string name="detail.state">state :</string>
+    <string name="detail.bond.state">Bond State :</string>
 
-    <string name="detail_peripheral">Peripheral:</string>
-    <string name="detail_service">Service:</string>
-    <string name="detail_uuid">UUID:</string>
-    <string name="detail_char">Characteristic:</string>
-    <string name="detail_type">Data Type:</string>
+    <string name="detail.peripheral">Peripheral:</string>
+    <string name="detail.service">Service:</string>
+    <string name="detail.uuid">UUID:</string>
+    <string name="detail.char">Characteristic:</string>
+    <string name="detail.type">Data Type:</string>
 
-    <string name="detail_string">String :</string>
-    <string name="detail_decimal">Decimal :</string>
-    <string name="detail_updated">Updated :</string>
+    <string name="detail.string">String :</string>
+    <string name="detail.decimal">Decimal :</string>
+    <string name="detail.updated">Updated :</string>
 
     <string name="gattManager">BLE</string>
     <string name="rssi">rssi</string>
@@ -48,13 +48,13 @@
 
     <string name="connected">connected</string>
     <string name="disconnected">disconnected</string>
-        <string name="detail_child_list_item_characteristics_title">detail_child_list_item_characteristics_title</string>
-        <string name="detail_child_list_item_characteristics_UUID">detail_child_list_item_characteristics_UUID</string>
-        <string name="detail_child_list_item_characteristics_value">detail_child_list_item_characteristics_value</string>
+    <string name="detail.child.list.item.characteristics.title">detail.child.list.item.characteristics.title</string>
+    <string name="detail.child.list.item.characteristics.UUID">detail.child.list.item.characteristics.UUID</string>
+    <string name="detail.child.list.item.characteristics.value">detail.child.list.item.characteristics.value</string>
 
-    <string name="detail_parent_list_item_service_title">detail_parent_list_item_service_title</string>
-    <string name="detail_parent_list_item_service_UUID">detail_parent_list_item_service_UUID</string>
-    <string name="detail_parent_list_item_service_type">detail_parent_list_item_service_type</string>
+    <string name="detail.parent.list.item.service.title">detail.parent.list.item.service.title</string>
+    <string name="detail.parent.list.item.service.UUID">detail.parent.list.item.service.UUID</string>
+    <string name="detail.parent.list.item.service.type">detail.parent.list.item.service.type</string>
 
 
     <string name="tg">ToggleButton</string>
@@ -64,58 +64,61 @@
     <string name="pilot">A Pilot Program By</string>
     <string name="logo">Rainbow - Wireless</string>
 
-    <string name="dashboard_time">Device Time</string>
+    <string name="dashboard.time">Device Time</string>
 
-    <string name="dashboard_step">STEP</string>
-    <string name="dashboard_calorie">CALORIE</string>
-    <string name="dashboard_distance">DISTANCE</string>
-    <string name="dashboard_etc">ETC</string>
+    <string name="dashboard.step">STEP</string>
+    <string name="dashboard.calorie">CALORIE</string>
+    <string name="dashboard.distance">DISTANCE</string>
+    <string name="dashboard.etc">ETC</string>
 
-    <string name="today">today</string>
-    <string name="yesterday">yesterday</string>
-    <string name="goal">GOAL</string>
+    <string name="bt.on">블루투스 On</string>
+    <string name="bt.not.init">블루투스가 시작되지 않았습니다.</string>
+    <string name="bt.must.start">블루투스를 시작해야 합니다.</string>
+    <string name="bt.fail">기기가 블루투스를 지원하지 않거나 블루투스 장치가 제거되어있습니다.(init Fail)</string>
 
-    <string name="bt_not_init">블루투스가 시작되지 않았습니다.</string>
-    <string name="bt_must_start">블루투스를 시작해야 합니다.</string>
-    <string name="bt_fail">기기가 블루투스를 지원하지 않거나 블루투스 장치가 제거되어있습니다.(init Fail)</string>
+    <string name="device.list.nothing">블루루스 BLE 기기가 탐색되지 않았습니다</string>
+    <string name="device.list.nothing.nursing">블루루스 BLE 기기가 탐색되지 않았습니다. 다시 검색중</string>
 
-    <string name="has_not_card">블루루스 BLE 기기가 탐색되지 않았습니다</string>
-    <string name="has_not_card_nursing">블루루스 BLE 기기가 탐색되지 않았습니다. 다시 검색중</string>
+    <string name="permission.thanks">권한 획득, 감사합니다.</string>
+    <string name="permission.request"><![CDATA[[권한] 탭 -> [위치] 권한을 허용해주십시오]]></string>
+    <string name="permission.denial">권한의 획득을 거부</string>
 
-    <string name="permission_thanks">권한 획득, 감사합니다.</string>
-    <string name="permission_request"><![CDATA[[권한] 탭 -> [위치] 권한을 허용해주십시오]]></string>
-    <string name="permission_denial">권한의 획득을 거부</string>
-    <string name="accept">확인</string>
-    <string name="fix">수정</string>
-    <string name="skip_warning">개인정보를 입력하지 않더라도 사용할 수 있으나 정확한 운동량 계산과 서버연동이 불가능하오니 이점 유의해두시기 바랍니다.</string>
-    <string name="skip">무시하기</string>
+    <string name="add.user.name.hint">Name</string>
+    <string name="add.user.age.hint">Age (in full)</string>
+    <string name="add.user.height.hint">Height (Metric)</string>
+    <string name="add.user.weight.hint">Weight (Kg)</string>
+    <string name="add.user.step.hint">Step Stride (Centimeter)</string>
+    <string name="add.user.men">Man</string>
+    <string name="add.user.woman">woman</string>
+    <string name="add.user.skip">Skip</string>
 
-    <string name="username_default">N/A</string>
-    <string name="user_age_default">20</string>
-    <string name="user_height_default">170</string>
-    <string name="user_weight_default">60</string>
-    <string name="user_step_default">60</string>
-    <string name="user_gender_default">남성</string>
-    <string name="gender_man">남성</string>
-    <string name="gender_woman">여성</string>
+    <string name="dialog.accept">확인</string>
+    <string name="dialog.accept.ok">기입 정보가 확실한지 확인해주시기 바랍니다.</string>
+    <string name="dialog.fix">수정</string>
+    <string name="dialog.skip.warning">개인정보를 입력하지 않더라도 사용할 수 있으나 정확한 운동량 계산과 서버연동이 불가능하오니 이점 유의해두시기 바랍니다.</string>
+    <string name="dialog.skip">무시하기</string>
+
+    <string name="user.name.default">N/A</string>
+    <string name="user.age.default">20</string>
+    <string name="user.height.default">170</string>
+    <string name="user.weight.default">60</string>
+    <string name="user.step.default">60</string>
+    <string name="user.gender.default">남성</string>
+
+    <string name="gender.man">남성</string>
+    <string name="gender.woman">여성</string>
+
     <string name="reconnect">다시 연결하기</string>
-    <string name="reconnect_accept">재시도</string>
+    <string name="reconnect.accept">재시도</string>
+
     <string name="exit">종료</string>
-    <string name="device_disconnected">기기와의 연결이 비활성화 되었습니다</string>
+    <string name="device.disconnected">기기와의 연결이 비활성화 되었습니다</string>
     <string name="connecting">연결중</string>
-    <string name="add_user_name_hint">Name</string>
-    <string name="add_user_age_hint">Age (in full)</string>
-    <string name="add_user_height_hint">Height (Metric)</string>
-    <string name="add_user_weight_hint">Weight (Kg)</string>
-    <string name="add_user_step_hint">Step Stride (Centimeter)</string>
-    <string name="add_user_men">Man</string>
-    <string name="add_user_woman">woman</string>
-    <string name="add_user_skip">Skip</string>
-    <string name="bt_on">블루투스 On</string>
-    <string name="fail_characteristic">Fail!</string>
-    <string name="service_type_primary">primary</string>
-    <string name="service_type_secondary">Secondary</string>
-    <string name="accept_ok">기입 정보가 확실한지 확인해주시기 바랍니다.</string>
+
+
+    <string name="fail.characteristic">Fail!</string>
+    <string name="service.type.primary">primary</string>
+    <string name="service.type.secondary">Secondary</string>
 
 
 </resources>
