Update DashBoard Layout and resources
dashboard.xml
    - Add Icons
    - Update value Text location with Style

values
    - Delete unused colors resource
    - Delete unused dimens resource
    - Update unused strings resource
    - Delete values.xml resource File

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@
     <string name="add.user.height.hint">Height (Metric)</string>
     <string name="add.user.weight.hint">Weight (Kg)</string>
     <string name="add.user.step.hint">Step Stride (Centimeter)</string>
-    <string name="add.user.men">Man</string>
+    <string name="add.user.man">Man</string>
     <string name="add.user.woman">woman</string>
     <string name="add.user.skip">Skip</string>
 
