Update init Layout Background and Add timeStamp String resource

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,5 +117,6 @@
     <string name="gender.man">남성</string>
     <string name="gender.woman">여성</string>
     <string name="uuid.unit">0x</string>
+    <string name="timestamp">yyyy.MM.dd HH.mm.ss.SSS</string>
 
 </resources>
