--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,9 +41,9 @@
     <string name="permission.thanks">권한 획득, 감사합니다.</string>
     <string name="permission.denial">권한의 획득을 거부</string>
 
-    <string name="profile.label.name">Name :</string>
+    <string name="profile.label.name">Device Name :</string>
     <string name="profile.label.rssi">RSSI :</string>
-    <string name="profile.label.address">Address :</string>
+    <string name="profile.label.address">Mac Address :</string>
     <string name="profile.label.state">state :</string>
     <string name="profile.label.bondState">Bond State :</string>
 
