Add Recent Update Time TextView in f_prime_main_dashboard.xml
f_prime_main_dashboard.xml :
    - 카드뷰의 마진 고정 (10dp)
    - 시간 / 날짜 뷰를 나누어 표시

PrimeHelper / PrimeActivity :
    - readTime 메서드의 코드 수정 날짜 / 시간의 차별 연산

DashboardFragment :
    - timeTextView / dateTextView 추가
    - NestedScrollView 의 화면짤림현상 확인

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -76,7 +76,8 @@
     <string name="logo.company">Rainbow - Wireless</string>
 
 
-    <string name="dashboard.time">Device Time</string>
+    <string name="dashboard.time">Time</string>
+    <string name="dashboard.update">최근 업데이트</string>
 
     <string name="dashboard.step">STEP</string>
     <string name="dashboard.calorie">CALORIE</string>
