--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,9 +78,9 @@
     <string name="dashboard.distance">DISTANCE</string>
     <string name="dashboard.etc">ETC</string>
 
-    <string name="prime.step">"걸음"</string>
-    <string name="prime.calorie">"kcal"</string>
-    <string name="prime.distance">"M"</string>
+    <string name="prime.total.step">"총 걸음"</string>
+    <string name="prime.total.calorie">"누적 kcal"</string>
+    <string name="prime.total.distance">"누적 거리"</string>
 
     <string name="prime.access.denial">"Access Denial"</string>
 
